cmake_minimum_required(VERSION 3.17)
project(NatNet_Example)
#link_directories(/NatNet_SDK_3.1_ubuntu/lib)
add_library(NatNetLibs SHARED NatNetCAPI.h NatNetClient.h NatNetRepeater.h NatNetRequests.h NatNetTypes.h)
set_target_properties(NatNetLibs PROPERTIES LINKER_LANGUAGE CXX)

#include_directories(${CMAKE_CURRENT_SOURCE_DIR})
#target_link_libraries(NatNetLibs PUBLIC -lNatNetLibShared)
set(CMAKE_CXX_STANDARD 14)

add_executable(NatNet_Example main.cpp)
#target_link_libraries(NatNet_Example NatNetLibs)
target_link_directories(NatNet_Example PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(NatNet_Example NatNetLibs -lNatNetLibShared)
add_executable(SampleClient SampleClient.cpp)
target_link_directories(SampleClient PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(SampleClient NatNetLibs -lNatNetLibShared)
#target_link_libraries(SampleClient NatNetLibShared)
#target_link_libraries(SampleClient STATIC /NatNet_SDK_3.1_ubuntu/lib/libNatNetLibShared.so)